...
                Menu {
                    Section {
                        if let pdfURL {
                            ShareLink(item: pdfURL) {
                                Label("Share as PDF", systemImage: "square.and.arrow.up")
                            }
                            .accessibilityIdentifier("sharePDFButton")
                        } else {
                            Text("PDF will be created...")
                                .onAppear {
                                    pdfURL = createPDF(recipe: recipe, listStyle: listStyle)
                                }
                        }
...
                            Label("Edit Recipe", systemImage: "pencil")
                        }
                    }
                } label: {
                    Image(systemName: "ellipsis.circle")
                }
                .accessibilityIdentifier("menuButton")
            }
        }
        .fileExporter(isPresented: $showingExporter, document: RecipeJSONFile(recipe: recipe.toDTO()), contentType: .json, defaultFilename: "\(recipe.name)_\(Date().formatted(date: .abbreviated, time: .omitted))") { result in
            switch result {
            case .success(let url):
                print("Exported to \(url)")
...
